@@ -1,7 +1,7 @@
 S3method(print,wald)
 export(bfactor)
+export(boot.mirt)
 export(calcLogLik)
-export(calcSE)
 export(confmirt)
 export(confmirt.model)
 export(expand.table)
