@@ -1,3 +1,6 @@
+* boot.mirt() function added for computing bootstrapped standard errors with via the boot 
+  package (which supports parallel computing as well)
+
 * indexing items in itemplot, itemfit, and extract.item can be called using either a number or the 
   original item name
 
